# 6502_emulator

./: CMakeLists.txt  LICENSE  Makefile  README.md  a.out  cpu.c  cpu.h  emulator  instruction_set.c  instruction_set.h  main.c  memory.c  memory.h
include/: cpu.h  instruction_set.h  memory.h
src/: cpu.c  instruction_set.c  memory.c
tests/: test_adc.cpp  test_cpu.cpp  test_fixture.h  test_lda.cpp  test_ldx.cpp  test_main.cpp  test_memory.cpp
